# Franka_sim

./: CMakeLists.txt  README.md  package.xml
include/: functions.h
launch/: door.launch  publish_frames.launch  simulation.launch  test.launch  test2.launch
launch/mikko testing/: model.xml  samplefinal.xml  test.urdf  test2.launch
model/: README.rst  door.py
model/meshes/: door_v4_bin.stl  door_v5_bin.stl  frame_v4_leftpillar_back_bin.stl  frame_v4_leftpillar_front_bin.stl  frame_v4_rightpillar_bin.stl  frame_v4_top_bottom_bin.stl  frame_v5_leftpillar_back_bin.stl  frame_v5_leftpillar_front_bin.stl  frame_v5_rightpillar_bin.stl  frame_v5_top_bottom_bin.stl  handle_v4_beam_bin.stl  handle_v4_core_bin.stl  handle_v4_latch_bin.stl  handle_v5_beam_bin.stl  handle_v5_core_bin.stl  handle_v5_latch_bin.stl
model/robots/: hand.xacro  model.xml  robot.xml  robot_door.urdf  robot_door.urdf.xacro  robot_door.xml  samplefinal.xml  sim.urdf.xacro  test.urdf
src/: README.rst  door_demo.cpp  interface.py  pick_and_place.cpp  src_pick_and_place.cpp  test.cpp  testinterface.py
