<?xml version="1.0"?>
<package format="2">
  <name>franka_sim</name>
  <version>1.0.0</version>
  <description>The franka_sim package. 
  Includes a simulation environment for a door and a Franka Panda robot,
  Python code for door parameterization,
  and a Python interface for RL.</description>

  <maintainer email="orgilbold.zardikan@aalto.fi">zardiko1</maintainer>
  <license>BSD</license>
  <url type="website">http://version.aalto.fi/gitlab/project-16/franka_sim</url>
  
  <author email="calvin.guillotsuarez@aalto.fi">Model</author>
  <author email="eetu.savolainen@aalto.fi">Model,Interface</author>
  <author email="juuso.leskinen@aalto.fi">Simulation</author>
  <author email="mikko.siltala@aalto.fi">Simulation</author>
  <author email="orgilbold.zardikan@aalto.fi">Simulation</author>
  <author email="petri.kalima@aalto.fi">Model,Interface</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>mujoco_ros_control</depend>
  <depend>lumi_mujoco</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>franka_description</depend>
  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>

</package>
